Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ClassToTypeParm.out
ClassToTypeParm.java:12:15: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Class, T)
1 error
